# bug-triage

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260501_0001_init.py
bench/: baseline.json  harness.py  regress.py
corpus/: README.md
corpus/resolutions/: R001.json  R002.json  R003.json  R004.json  R005.json  R006.json  R007.json  R008.json  R009.json  R010.json  R011.json  R012.json  R013.json  R014.json  R015.json  R016.json  R017.json  R018.json  R019.json  R020.json  R021.json  R022.json  R023.json  R024.json  R025.json  R026.json  R027.json  R028.json  R029.json  R030.json  R031.json  R032.json  R033.json  R034.json  R035.json  R036.json  R037.json  R038.json  R039.json  R040.json  (+160 more)
eval/baselines/: triage_fake.json
eval/suites/: triage_v1.yaml
scripts/: apply_and_test_smoke.py  generate_corpus.py  generate_synthetic_corpus.py  seed.py
src/bug_triage/: __init__.py  api.py  applier.py  auto_pr.py  classifier.py  cli.py  corpus.py  embedder.py  eval_harness.py  models.py  pipeline.py  retriever.py  settings.py  suggester.py
src/bug_triage/prompts/: __init__.py  classify.yaml  suggest.yaml
src/bug_triage/providers/: __init__.py  anthropic_provider.py  base.py  fake.py  openai_provider.py
tests/: conftest.py
tests/eval/: test_eval_smoke.py
tests/integration/: test_pgvector_integration.py
tests/property/: test_classifier_property.py  test_diff_fuzz.py  test_retrieval_property.py
tests/unit/: test_api.py  test_applier.py  test_auto_pr.py  test_bench.py  test_classifier.py  test_cli.py  test_corpus.py  test_embedder.py  test_eval_harness.py  test_pipeline.py  test_provider_stubs.py  test_retriever.py  test_settings.py  test_suggester.py
