[tool.poetry]
name = "bug-triage"
version = "0.1.0"
description = "Bug-triage prototype: severity+component classification, retrieval-augmented fix suggestion against a Java corpus, REST API"
authors = ["Sai Asish Y"]
license = "MIT"
readme = "README.md"
packages = [{include = "bug_triage", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
click = "^8.1.7"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.2.0"}
pgvector = "^0.3.0"
alembic = "^1.13.0"
unidiff = "^0.7.5"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.108.0"
ruff = "^0.5.0"
black = "^24.4.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0.12"
pre-commit = "^3.7.0"

[tool.poetry.group.embeddings]
optional = true

[tool.poetry.group.embeddings.dependencies]
sentence-transformers = "^3.0.0"

[tool.poetry.group.providers]
optional = true

[tool.poetry.group.providers.dependencies]
anthropic = "^0.34.0"
openai = "^1.40.0"

[tool.poetry.scripts]
bug-triage = "bug_triage.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/bug_triage"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "unidiff.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires RUN_INTEGRATION=1",
    "eval_smoke: requires RUN_EVAL_SMOKE=1",
]

[tool.coverage.run]
source = ["src/bug_triage"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
